fix: resolve unit test failures and refine locale and export logic